start:implement delete customer
