# src/handler/openapigenmodel/go/model_success_message.go
@@ -1,0 +1,31 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Customer API
+ *
+ * API for customer management
+ *
+ * API version: 1.0.0
+ */
+
+package openapi
+
+
+
+
+type SuccessMessage struct {
+
+	Id string `json:"id,omitempty"`
+
+	Deleted bool `json:"deleted,omitempty"`
+}
+
+// AssertSuccessMessageRequired checks if the required fields are not zero-ed
+func AssertSuccessMessageRequired(obj SuccessMessage) error {
+	return nil
+}
+
+// AssertSuccessMessageConstraints checks if the values respects the defined constraints
+func AssertSuccessMessageConstraints(obj SuccessMessage) error {
+	return nil
+}
